5-service-and-networking/2-demonstrate-basic-understanding-of-networkPolicies/src/febe-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: febe
  namespace: ps
spec:
  podSelector:
    matchLabels:
      app: be
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fe
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ps
    ports:
    - protocol: TCP
      port: 5432
